<resources>
    <string name="app_name">login</string>
    <string name="started_title">Welcome To The App</string>
    <string name="started_sub_title">
    <br><b>Login</b> if you already have an account</br>
    <br><b>Register</b> to get started with the app</br>
    </string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>


    <string name="login_title">Login To App</string>
    <string name="login_sub_title">
        <font color="#00C988"><b>Login </b></font>if you already have an account.
    </string>
    <string name="login_email">Your Username Or Email</string>
    <string name="login_password">Your Password</string>
    <string name="visit">Visit</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_havent_account">
        i don\'t have account
        <font color="#00C988"><b>Register</b></font>
    </string>


    <string name="register_title">Create an Account</string>
    <string name="register_sub_title"><font color="#00C988"><b>Register </b></font>to get started with app.
    </string>
    <string name="register_fullname">Your Fullname</string>
    <string name="register_email">Your Email</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_have_account">
        already have account <font color="#00C988"><b>Login</b></font>
    </string>
    <string name="home_title">cam background</string>
    <string name="home_sub_title">Welcome to Home</string>
    <string name="btn_logout">LOGOUT</string>

    <string name="err_no_cam_permission">App requires camera permission to work!</string>
    <string name="send_to">share</string>
</resources>